--- a/public/assets/scss/globals.scss
+++ b/public/assets/scss/globals.scss
@@ -36,7 +36,7 @@ body {
   overflow-x: hidden;
   user-select: none;
   scroll-behavior: smooth;
-  font-family: 'Instrument Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body.overflow-unset {
